<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Hello"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/task_title"
        android:text="Hello"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/task_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/task_description"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:onClick="deleteTask"
        android:text="Done" />

    <EditText
        android:id="@+id/task_dh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/task_delete"
        android:ems="10"
        android:inputType="date"
        android:text="date" />

</RelativeLayout>